fix: changes in role properties and on the test
