# packages/backend/src/modules/Role/application/create/ICreateRoleRequest.ts
@@ -1,5 +1,5 @@
 export interface ICreateRoleRequest {
   id: string;
-  roleName: string;
-  roleState: string;
+  name: string;
+  state: string;
 }
