# packages/backend/src/modules/Role/application/getById/GetRoleByIdResponse.ts
@@ -1,7 +1,7 @@
 export class GetRoleByIdResponse {
   constructor(
     public id: string,
-    public roleName: string,
-    public roleState: string,
+    public name: string,
+    public state: string,
   ) {}
 }
