# packages/backend/src/modules/Role/application/update/UpdateRoleValidator.ts
@@ -3,19 +3,13 @@ import { body, param } from 'express-validator';
 export const UpdateRoleValidator = [
   param('id').exists().withMessage("The 'id' field is required").isUUID().withMessage("The 'Id' field must be a valid Uuid").trim().escape(),
 
-  body('roleName')
-    .exists()
-    .withMessage("The 'roleName' field is required")
-    .isString()
-    .withMessage("The 'roleName' field must be a valid string")
-    .trim()
-    .escape(),
+  body('name').exists().withMessage("The 'name' field is required").isString().withMessage("The 'name' field must be a valid string").trim().escape(),
 
-  body('roleState')
+  body('state')
     .exists()
-    .withMessage("The 'roleState' field is required")
+    .withMessage("The 'state' field is required")
     .isString()
-    .withMessage("The 'roleState' field must be a valid string")
+    .withMessage("The 'state' field must be a valid string")
     .trim()
     .escape(),
 ];
